Agregando BEM a pag nosotros + bootstrap

--- a/sass/estilosSass.scss
+++ b/sass/estilosSass.scss
@@ -3,7 +3,7 @@
     padding: 0;
     font-family: 'Roboto', sans-serif;
     font-size: 0.9rem;
-    text-decoration: none;
+    text-decoration: none !important;
     list-style: none;
     box-sizing: border-box;
 }
