--- a/sass/estilosSass.scss
+++ b/sass/estilosSass.scss
@@ -15,4 +15,6 @@ $tipografiaTitulos: #4e4e4e 2.5rem;
 @import "header.scss";
 @import "footer.scss";
 @import "index.scss";
+@import "productos.scss";
 @import "maps.scss";
+@import "mixin.scss";
