Agregando extend a pag productos

--- a/sass/estilosSass.scss
+++ b/sass/estilosSass.scss
@@ -18,3 +18,4 @@ $tipografiaTitulos: #4e4e4e 2.5rem;
 @import "productos.scss";
 @import "maps.scss";
 @import "mixin.scss";
+@import "extend.scss";
