Terminando pag ubicacion

--- a/sass/estilosSass.scss
+++ b/sass/estilosSass.scss
@@ -21,3 +21,4 @@ $tipografiaTitulos: #4e4e4e 2.5rem;
 @import "mixin.scss";
 @import "extend.scss";
 @import "card.scss";
+@import "ubicacion.scss";
