Terminando pag contacto

--- a/sass/estilosSass.scss
+++ b/sass/estilosSass.scss
@@ -22,3 +22,4 @@ $tipografiaTitulos: #4e4e4e 2.5rem;
 @import "extend.scss";
 @import "card.scss";
 @import "ubicacion.scss";
+@import "contacto.scss";
