--- a/sass/estilosSass.scss
+++ b/sass/estilosSass.scss
@@ -23,3 +23,4 @@ $tipografiaTitulos: #4e4e4e 2.5rem;
 @import "card.scss";
 @import "ubicacion.scss";
 @import "contacto.scss";
+// @import "nosotros.scss";
