--- a/stylesheet/estilosNuevos.css
+++ b/stylesheet/estilosNuevos.css
@@ -340,6 +340,13 @@
   padding: 100px;
   text-align: center; }
 
+.nosotros__title .main__title {
+  color: #282828;
+  font-weight: 500;
+  font-size: 2.5rem;
+  padding: 50px;
+  text-align: center; }
+
 .main .form .form__list .form__name {
   height: 30px;
   width: 500px; }
